log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 11:05:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘List’ [-Werror=unused-variable]
   14 |   ArrayList* List = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
4961595
Tue 28 Mar 2023 11:06:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘L’ [-Werror=unused-variable]
   14 |   ArrayList* L = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
a590bbd
Tue 28 Mar 2023 11:06:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘List’ [-Werror=unused-variable]
   14 |   ArrayList* List = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
c0ede51
Tue 28 Mar 2023 11:06:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
85f13f6
Tue 28 Mar 2023 11:07:21 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
03393f7
Tue 28 Mar 2023 11:08:52 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
d279225
Tue 28 Mar 2023 11:15:08 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:6: error: ‘List’ undeclared (first use in this function)
   24 |   if(List -> size == List -> capacity){
      |      ^~~~
arraylist.c:24:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
eabd50c
Tue 28 Mar 2023 11:15:23 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b9042eb
Tue 28 Mar 2023 11:16:03 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
80deb2f
Tue 28 Mar 2023 11:16:20 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
d9d6427
Tue 28 Mar 2023 11:16:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cb19162
Tue 28 Mar 2023 11:17:04 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f97cfc6
Thu 30 Mar 2023 01:06:53 AM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
aa0f92d
Thu 30 Mar 2023 08:29:41 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 20/70
104ec87
Thu 30 Mar 2023 08:33:46 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
24a68c1
Thu 30 Mar 2023 08:35:12 PM UTC: 
 arraylist.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  3|4
total_score: 20/70
d2e2984
Thu 30 Mar 2023 08:35:16 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
d495dd1
Thu 30 Mar 2023 08:35:31 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:39:23: error: expected ‘;’ before ‘}’ token
   39 |     l -> capacity *= 2
      |                       ^
      |                       ;
   40 |   }
      |   ~                    
Compilation failed
7c1fbad
Thu 30 Mar 2023 08:35:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
3c70518
Thu 30 Mar 2023 08:36:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
599066f
Thu 30 Mar 2023 08:36:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
413e434
Thu 30 Mar 2023 08:37:12 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
12ee4a1
Thu 30 Mar 2023 08:37:50 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
0ca2811
Thu 30 Mar 2023 08:37:59 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
1ee686a
Thu 30 Mar 2023 08:38:45 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d6211fe
Thu 30 Mar 2023 10:49:46 PM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
6fefbec
Thu 30 Mar 2023 10:51:59 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a2281bb
Thu 30 Mar 2023 10:53:17 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
629c692
Thu 30 Mar 2023 11:10:00 PM UTC: 
 arraylist.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
2d85bfd
Thu 30 Mar 2023 11:10:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
80fd6bc
Thu 30 Mar 2023 11:11:37 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  8|2
total_score: 40/70
2f95d9b
Thu 30 Mar 2023 11:21:19 PM UTC: 
 arraylist.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  8|2
total_score: 40/70
b4a68a3
Thu 30 Mar 2023 11:24:49 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|2
total_score: 40/70
b0d7d98
